@@ -1335,6 +1335,7 @@ END
 
 TEXTHOOKER DIALOGEX 0, 0, 456, 327
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_ACCEPTFILES
 CAPTION "Text Hooker"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
